--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.datasource.username=admin
 spring.datasource.password=pass
 spring.jpa.open-in-view=true
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
 #spring.liquibase.change-log=classpath:db/liquibase-changelog.yaml
