--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=FinanceApp
+
 server.port=8088
 
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:db;DATABASE_TO_UPPER=false
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=pass
 spring.jpa.open-in-view=true
+springdoc.swagger-ui.oauth.use-basic-authentication-with-access-code-grant=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
