--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <version>0.8.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
